--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.10.1"
+    "@astrojs/node": "^9.2.2",
+    "astro": "^5.10.1",
+    "hiveblogkit": "file:../../Programas/Hive/HiveBlogKit",
+    "marked": "^16.0.0",
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^24.11.0"
   },
   "devDependencies": {
     "sharp": "^0.34.2"
