--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/node": "^9.2.2",
     "astro": "^5.10.1",
+    "gray-matter": "^4.0.3",
     "hiveblogkit": "file:../../Programas/Hive/HiveBlogKit",
     "marked": "^16.0.0",
     "node-fetch": "^3.3.2",
